--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "proxy": "http://localhost:4000",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "14.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@fortawesome/react-fontawesome": "0.2.0",
     "axios": "^0.21.1",
     "concurrently": "^6.0.0",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "1.1.4",
-    "react-toastify": "4.5.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "6.19.0",
+    "react-scripts": "5.0.0",
+    "react-toastify": "9.1.3"
   },
   "scripts": {
     "start": "concurrently \"cd ../server && yarn start\" \"react-scripts start\"",
@@ -42,7 +45,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
