--- a/client/package.json
+++ b/client/package.json
@@ -46,5 +46,13 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "14.0.0",
+    "yarn": "1.20.0"
+  },
+  "volta": {
+    "node": "14.0.0",
+    "yarn": "1.22.11"
+  }
 }
