Add testing packages and run first test

--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "proxy": "http://localhost:4000",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "14.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "0.2.0",
@@ -18,11 +15,20 @@
     "react-scripts": "5.0.0",
     "react-toastify": "9.1.3"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "14.1.2",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^13.5.0",
+    "jest-watch-typeahead": "^0.6.5"
+  },
   "scripts": {
     "start": "concurrently \"cd ../server && yarn start\" \"react-scripts start\"",
     "react-start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "ci-test": "CI=true react-scripts test --verbose",
+    "coverage": "react-scripts test --verbose --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
