--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "14.1.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios-mock-adapter": "^1.22.0",
     "jest-watch-typeahead": "^0.6.5"
   },
   "scripts": {
