--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "0.2.0",
+    "antd": "^5.12.1",
     "axios": "^0.21.1",
     "concurrently": "^6.0.0",
     "react": "^18.2.0",
